--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
 
     <string name="voltarECorrigir">Voltar e corrigir</string>
     <string name="charMoeda">[R,$.]</string>
+    <string name="devs">Isaac José | Joaquim Heitor | Vanderson Fábio</string>
+    <string name="developed_by">Developed by:</string>
 
 
 </resources>
